@@ -1,5 +1,9 @@
 # $Id$
 
+2007-02-09	Dmitry E. Demidov
+
+	* core/Form/Primitives/PrimitiveImage.class.php: fix return value.
+
 2007-02-07	Denis M. Gabaidulin
 
 	* core/OSQL/SelectQuery.class.php: having clause support was added.
